cabal-version:      2.4
name:               ConnectFour
version:            0.1.0.0


synopsis: A small Connect Four program.

author:             ivy bridges
maintainer:         ivy.v.bridges@gmail.com


extra-source-files: 

executable ConnectFour
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    BoardHelper, ConnectFour

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0, array >= 0.5.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
